 - DS Video: Fix display capture blending value 16 (fixes mgba.io/i/757)
 - DS GX: Properly center cross product in polygon normal calculations
Misc:
 - DS GX: Clean up and unify texture mapping
 - DS Core: Add symbol loading
 - DS Video: Simplify VRAM mapping

0.7.0: (Future)
Features:
 - ELF support
Bugfixes:
 - GB Audio: Make audio unsigned with bias (fixes mgba.io/i/749)
Misc:
 - GBA Timer: Use global cycles for timers
 - GBA: Extend oddly-sized ROMs to full address space (fixes mgba.io/i/722)
 - All: Make FIXED_ROM_BUFFER an option instead of 3DS-only

0.6.0: (2017-07-16)
Features:
 - Library view
 - Sprite viewer
 - Debugging console
 - Improved memory viewer
 - Memory search
 - Command line ability to override configuration values
 - Add option to allow preloading the entire ROM before running
 - Add option for whether rewinding restores save games
 - Savestates now contain any RTC override data
 - Add option to lock video to integer scaling
 - LR35902: Watchpoints
 - LR35902/GB-Z80 disassembler
 - GB: Tile viewer
 - GB: Video/audio channel enabling/disabling
 - GB: Symbol table support
 - GB MBC: Add MBC1 multicart support
 - GBA: Support printing debug strings from inside a game
 - GBA: Better cheat type autodetection
 - Implement keypad interrupts
 - Configuration of gamepad hats
 - Video log recording for testing and bug reporting
 - Debugger: Segment/bank support
 - Debugger: Execution tracing
 - Qt: German translation (by Lothar Serra Mari)
 - Qt: Spanish translation (by Kevin López)
 - Qt: Italian translation (by theheroGAC)
Bugfixes:
 - ARM7: Fix MLA/*MULL/*MLAL timing
 - Core: Fix crash with rewind if savestates shrink
 - Core: Fix interrupting a thread while on the thread (fixes mgba.io/i/692)
 - Core: Fix directory sets crashing on close if base isn't properly detached
 - FFmpeg: Fix overflow and general issues with audio encoding
 - GB: Fix flickering when screen is strobed quickly
 - GB: Fix STAT blocking